// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <SafeSpaceBottom /> 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
      },
      {
        "height": 0,
      },
    ]
  }
/>
`;

exports[`renders <SafeSpaceTop /> 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
      },
      {
        "height": 0,
      },
    ]
  }
/>
`;

exports[`renders <Space /> 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
      },
      {
        "height": 24,
      },
    ]
  }
/>
`;
